v0.6.0/_sources/gallery/lightning-creek-magnetic.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/lightning-creek-magnetic.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_lightning-creek-magnetic.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_lightning-creek-magnetic.py:


Magnetic anomaly grid of the Lightning Creek Sill Complex, Australia
--------------------------------------------------------------------

This is a section of an airborne survey acquired in 1990 by the Queensland
Government, Australia. The grid has 50 m resolution (UTM coordinates) and
is at a uniform orthometric height of 500 m.

**Original source:**
`Geophysical Acquisition & Processing Section 2019. MIM Data from Mt Isa
Inlier, QLD (P1029), magnetic line data, AWAGS levelled. Geoscience Australia,
Canberra <http://pid.geoscience.gov.au/dataset/ga/142419>`__

**Pre-processing:** `Source code for preparation of the original dataset for
redistribution in Ensaio
<https://github.com/fatiando-data/lightning-creek-magnetic-grid>`__

.. GENERATED FROM PYTHON SOURCE LINES 25-30

.. code-block:: Python

    import pygmt
    import xarray as xr

    import ensaio








.. GENERATED FROM PYTHON SOURCE LINES 31-32

Download and cache the data and return the path to it on disk

.. GENERATED FROM PYTHON SOURCE LINES 32-35

.. code-block:: Python

    fname = ensaio.fetch_lightning_creek_magnetic(version=1)
    print(fname)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/_temp/cache/ensaio/v1/lightning-creek-magnetic-grid.nc




.. GENERATED FROM PYTHON SOURCE LINES 36-37

Load the netCDF grid with xarray

.. GENERATED FROM PYTHON SOURCE LINES 37-40

.. code-block:: Python

    data = xr.load_dataarray(fname)
    data






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div><svg style="position: absolute; width: 0; height: 0; overflow: hidden">
    <defs>
    <symbol id="icon-database" viewBox="0 0 32 32">
    <path d="M16 0c-8.837 0-16 2.239-16 5v4c0 2.761 7.163 5 16 5s16-2.239 16-5v-4c0-2.761-7.163-5-16-5z"></path>
    <path d="M16 17c-8.837 0-16-2.239-16-5v6c0 2.761 7.163 5 16 5s16-2.239 16-5v-6c0 2.761-7.163 5-16 5z"></path>
    <path d="M16 26c-8.837 0-16-2.239-16-5v6c0 2.761 7.163 5 16 5s16-2.239 16-5v-6c0 2.761-7.163 5-16 5z"></path>
    </symbol>
    <symbol id="icon-file-text2" viewBox="0 0 32 32">
    <path d="M28.681 7.159c-0.694-0.947-1.662-2.053-2.724-3.116s-2.169-2.030-3.116-2.724c-1.612-1.182-2.393-1.319-2.841-1.319h-15.5c-1.378 0-2.5 1.121-2.5 2.5v27c0 1.378 1.122 2.5 2.5 2.5h23c1.378 0 2.5-1.122 2.5-2.5v-19.5c0-0.448-0.137-1.23-1.319-2.841zM24.543 5.457c0.959 0.959 1.712 1.825 2.268 2.543h-4.811v-4.811c0.718 0.556 1.584 1.309 2.543 2.268zM28 29.5c0 0.271-0.229 0.5-0.5 0.5h-23c-0.271 0-0.5-0.229-0.5-0.5v-27c0-0.271 0.229-0.5 0.5-0.5 0 0 15.499-0 15.5 0v7c0 0.552 0.448 1 1 1h7v19.5z"></path>
    <path d="M23 26h-14c-0.552 0-1-0.448-1-1s0.448-1 1-1h14c0.552 0 1 0.448 1 1s-0.448 1-1 1z"></path>
    <path d="M23 22h-14c-0.552 0-1-0.448-1-1s0.448-1 1-1h14c0.552 0 1 0.448 1 1s-0.448 1-1 1z"></path>
    <path d="M23 18h-14c-0.552 0-1-0.448-1-1s0.448-1 1-1h14c0.552 0 1 0.448 1 1s-0.448 1-1 1z"></path>
    </symbol>
    </defs>
    </svg>
    <style>/* CSS stylesheet for displaying xarray objects in jupyterlab.
     *
     */

    :root {
      --xr-font-color0: var(--jp-content-font-color0, rgba(0, 0, 0, 1));
      --xr-font-color2: var(--jp-content-font-color2, rgba(0, 0, 0, 0.54));
      --xr-font-color3: var(--jp-content-font-color3, rgba(0, 0, 0, 0.38));
      --xr-border-color: var(--jp-border-color2, #e0e0e0);
      --xr-disabled-color: var(--jp-layout-color3, #bdbdbd);
      --xr-background-color: var(--jp-layout-color0, white);
      --xr-background-color-row-even: var(--jp-layout-color1, white);
      --xr-background-color-row-odd: var(--jp-layout-color2, #eeeeee);
    }

    html[theme=dark],
    body[data-theme=dark],
    body.vscode-dark {
      --xr-font-color0: rgba(255, 255, 255, 1);
      --xr-font-color2: rgba(255, 255, 255, 0.54);
      --xr-font-color3: rgba(255, 255, 255, 0.38);
      --xr-border-color: #1F1F1F;
      --xr-disabled-color: #515151;
      --xr-background-color: #111111;
      --xr-background-color-row-even: #111111;
      --xr-background-color-row-odd: #313131;
    }

    .xr-wrap {
      display: block !important;
      min-width: 300px;
      max-width: 700px;
    }

    .xr-text-repr-fallback {
      /* fallback to plain text repr when CSS is not injected (untrusted notebook) */
      display: none;
    }

    .xr-header {
      padding-top: 6px;
      padding-bottom: 6px;
      margin-bottom: 4px;
      border-bottom: solid 1px var(--xr-border-color);
    }

    .xr-header > div,
    .xr-header > ul {
      display: inline;
      margin-top: 0;
      margin-bottom: 0;
    }

    .xr-obj-type,
    .xr-array-name {
      margin-left: 2px;
      margin-right: 10px;
    }

    .xr-obj-type {
      color: var(--xr-font-color2);
    }

    .xr-sections {
      padding-left: 0 !important;
      display: grid;
      grid-template-columns: 150px auto auto 1fr 20px 20px;
    }

    .xr-section-item {
      display: contents;
    }

    .xr-section-item input {
      display: none;
    }

    .xr-section-item input + label {
      color: var(--xr-disabled-color);
    }

    .xr-section-item input:enabled + label {
      cursor: pointer;
      color: var(--xr-font-color2);
    }

    .xr-section-item input:enabled + label:hover {
      color: var(--xr-font-color0);
    }

    .xr-section-summary {
      grid-column: 1;
      color: var(--xr-font-color2);
      font-weight: 500;
    }

    .xr-section-summary > span {
      display: inline-block;
      padding-left: 0.5em;
    }

    .xr-section-summary-in:disabled + label {
      color: var(--xr-font-color2);
    }

    .xr-section-summary-in + label:before {
      display: inline-block;
      content: '►';
      font-size: 11px;
      width: 15px;
      text-align: center;
    }

    .xr-section-summary-in:disabled + label:before {
      color: var(--xr-disabled-color);
    }

    .xr-section-summary-in:checked + label:before {
      content: '▼';
    }

    .xr-section-summary-in:checked + label > span {
      display: none;
    }

    .xr-section-summary,
    .xr-section-inline-details {
      padding-top: 4px;
      padding-bottom: 4px;
    }

    .xr-section-inline-details {
      grid-column: 2 / -1;
    }

    .xr-section-details {
      display: none;
      grid-column: 1 / -1;
      margin-bottom: 5px;
    }

    .xr-section-summary-in:checked ~ .xr-section-details {
      display: contents;
    }

    .xr-array-wrap {
      grid-column: 1 / -1;
      display: grid;
      grid-template-columns: 20px auto;
    }

    .xr-array-wrap > label {
      grid-column: 1;
      vertical-align: top;
    }

    .xr-preview {
      color: var(--xr-font-color3);
    }

    .xr-array-preview,
    .xr-array-data {
      padding: 0 5px !important;
      grid-column: 2;
    }

    .xr-array-data,
    .xr-array-in:checked ~ .xr-array-preview {
      display: none;
    }

    .xr-array-in:checked ~ .xr-array-data,
    .xr-array-preview {
      display: inline-block;
    }

    .xr-dim-list {
      display: inline-block !important;
      list-style: none;
      padding: 0 !important;
      margin: 0;
    }

    .xr-dim-list li {
      display: inline-block;
      padding: 0;
      margin: 0;
    }

    .xr-dim-list:before {
      content: '(';
    }

    .xr-dim-list:after {
      content: ')';
    }

    .xr-dim-list li:not(:last-child):after {
      content: ',';
      padding-right: 5px;
    }

    .xr-has-index {
      font-weight: bold;
    }

    .xr-var-list,
    .xr-var-item {
      display: contents;
    }

    .xr-var-item > div,
    .xr-var-item label,
    .xr-var-item > .xr-var-name span {
      background-color: var(--xr-background-color-row-even);
      margin-bottom: 0;
    }

    .xr-var-item > .xr-var-name:hover span {
      padding-right: 5px;
    }

    .xr-var-list > li:nth-child(odd) > div,
    .xr-var-list > li:nth-child(odd) > label,
    .xr-var-list > li:nth-child(odd) > .xr-var-name span {
      background-color: var(--xr-background-color-row-odd);
    }

    .xr-var-name {
      grid-column: 1;
    }

    .xr-var-dims {
      grid-column: 2;
    }

    .xr-var-dtype {
      grid-column: 3;
      text-align: right;
      color: var(--xr-font-color2);
    }

    .xr-var-preview {
      grid-column: 4;
    }

    .xr-index-preview {
      grid-column: 2 / 5;
      color: var(--xr-font-color2);
    }

    .xr-var-name,
    .xr-var-dims,
    .xr-var-dtype,
    .xr-preview,
    .xr-attrs dt {
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      padding-right: 10px;
    }

    .xr-var-name:hover,
    .xr-var-dims:hover,
    .xr-var-dtype:hover,
    .xr-attrs dt:hover {
      overflow: visible;
      width: auto;
      z-index: 1;
    }

    .xr-var-attrs,
    .xr-var-data,
    .xr-index-data {
      display: none;
      background-color: var(--xr-background-color) !important;
      padding-bottom: 5px !important;
    }

    .xr-var-attrs-in:checked ~ .xr-var-attrs,
    .xr-var-data-in:checked ~ .xr-var-data,
    .xr-index-data-in:checked ~ .xr-index-data {
      display: block;
    }

    .xr-var-data > table {
      float: right;
    }

    .xr-var-name span,
    .xr-var-data,
    .xr-index-name div,
    .xr-index-data,
    .xr-attrs {
      padding-left: 25px !important;
    }

    .xr-attrs,
    .xr-var-attrs,
    .xr-var-data,
    .xr-index-data {
      grid-column: 1 / -1;
    }

    dl.xr-attrs {
      padding: 0;
      margin: 0;
      display: grid;
      grid-template-columns: 125px auto;
    }

    .xr-attrs dt,
    .xr-attrs dd {
      padding: 0;
      margin: 0;
      float: left;
      padding-right: 10px;
      width: auto;
    }

    .xr-attrs dt {
      font-weight: normal;
      grid-column: 1;
    }

    .xr-attrs dt:hover span {
      display: inline-block;
      background: var(--xr-background-color);
      padding-right: 10px;
    }

    .xr-attrs dd {
      grid-column: 2;
      white-space: pre-wrap;
      word-break: break-all;
    }

    .xr-icon-database,
    .xr-icon-file-text2,
    .xr-no-icon {
      display: inline-block;
      vertical-align: middle;
      width: 1em;
      height: 1.5em !important;
      stroke-width: 0;
      stroke: currentColor;
      fill: currentColor;
    }
    </style><pre class='xr-text-repr-fallback'>&lt;xarray.DataArray &#x27;total_field_anomaly&#x27; (northing: 370, easting: 346)&gt;
    array([[  35.        ,   36.19995   ,   36.69995   , ..., -101.099976  ,
            -100.400024  ,  -99.599976  ],
           [  36.5       ,   37.599976  ,   38.        , ..., -102.20007   ,
            -101.5       , -100.70007   ],
           [  37.099976  ,   38.19995   ,   38.599976  , ..., -103.30005   ,
            -102.599976  , -101.900024  ],
           ...,
           [ 182.79993   ,  172.40002   ,  160.79993   , ...,    0.79992676,
             -24.200073  ,  -41.80005   ],
           [ 182.09998   ,  172.59998   ,  161.40002   , ...,    6.        ,
             -21.5       ,  -41.        ],
           [ 178.79993   ,  170.40002   ,  160.29993   , ...,   11.400024  ,
             -16.        ,  -35.80005   ]], dtype=float32)
    Coordinates:
      * easting   (easting) float64 4.655e+05 4.656e+05 ... 4.827e+05 4.828e+05
      * northing  (northing) float64 7.576e+06 7.576e+06 ... 7.595e+06 7.595e+06
        height    (northing, easting) float64 500.0 500.0 500.0 ... 500.0 500.0
    Attributes:
        Conventions:   CF-1.8
        title:         Magnetic total-field anomaly of the Lightning Creek sill c...
        crs:           proj=utm zone=54 south datum=WGS84 units=m no_defs ellps=W...
        source:        Interpolated from airborne magnetic line data using gradie...
        license:       Creative Commons Attribution 4.0 International Licence
        references:    Geophysical Acquisition &amp; Processing Section 2019. MIM Dat...
        long_name:     total-field magnetic anomaly
        units:         nT
        actual_range:  [-1785.  3798.]</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'total_field_anomaly'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>northing</span>: 370</li><li><span class='xr-has-index'>easting</span>: 346</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-77316af1-4d57-4919-b6e4-e1a3f2028b70' class='xr-array-in' type='checkbox' checked><label for='section-77316af1-4d57-4919-b6e4-e1a3f2028b70' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>35.0 36.2 36.7 36.6 36.3 35.6 ... 113.1 78.6 43.7 11.4 -16.0 -35.8</span></div><div class='xr-array-data'><pre>array([[  35.        ,   36.19995   ,   36.69995   , ..., -101.099976  ,
            -100.400024  ,  -99.599976  ],
           [  36.5       ,   37.599976  ,   38.        , ..., -102.20007   ,
            -101.5       , -100.70007   ],
           [  37.099976  ,   38.19995   ,   38.599976  , ..., -103.30005   ,
            -102.599976  , -101.900024  ],
           ...,
           [ 182.79993   ,  172.40002   ,  160.79993   , ...,    0.79992676,
             -24.200073  ,  -41.80005   ],
           [ 182.09998   ,  172.59998   ,  161.40002   , ...,    6.        ,
             -21.5       ,  -41.        ],
           [ 178.79993   ,  170.40002   ,  160.29993   , ...,   11.400024  ,
             -16.        ,  -35.80005   ]], dtype=float32)</pre></div></div></li><li class='xr-section-item'><input id='section-3c371adf-f619-4512-80f7-2b20dfce238f' class='xr-section-summary-in' type='checkbox'  checked><label for='section-3c371adf-f619-4512-80f7-2b20dfce238f' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>easting</span></div><div class='xr-var-dims'>(easting)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>4.655e+05 4.656e+05 ... 4.828e+05</div><input id='attrs-b980fdab-22c4-4c88-938f-a64729376def' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-b980fdab-22c4-4c88-938f-a64729376def' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-6852a45c-3de6-4818-9970-f3c58851bb2e' class='xr-var-data-in' type='checkbox'><label for='data-6852a45c-3de6-4818-9970-f3c58851bb2e' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>UTM easting</dd><dt><span>standard_name :</span></dt><dd>projection_x_coordinate</dd><dt><span>units :</span></dt><dd>m</dd><dt><span>actual_range :</span></dt><dd>[465533.31767977 482783.31767977]</dd></dl></div><div class='xr-var-data'><pre>array([465533.31768, 465583.31768, 465633.31768, ..., 482683.31768,
           482733.31768, 482783.31768])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>northing</span></div><div class='xr-var-dims'>(northing)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>7.576e+06 7.576e+06 ... 7.595e+06</div><input id='attrs-93fe5abd-109c-4fcb-af3f-c7b7d62dd3fc' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-93fe5abd-109c-4fcb-af3f-c7b7d62dd3fc' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-993c1952-f6b1-4996-8ef0-91425e2e2b62' class='xr-var-data-in' type='checkbox'><label for='data-993c1952-f6b1-4996-8ef0-91425e2e2b62' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>UTM northing</dd><dt><span>standard_name :</span></dt><dd>projection_y_coordinate</dd><dt><span>units :</span></dt><dd>m</dd><dt><span>actual_range :</span></dt><dd>[7576368.82029097 7594818.82029097]</dd></dl></div><div class='xr-var-data'><pre>array([7576368.820291, 7576418.820291, 7576468.820291, ..., 7594718.820291,
           7594768.820291, 7594818.820291])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>height</span></div><div class='xr-var-dims'>(northing, easting)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>500.0 500.0 500.0 ... 500.0 500.0</div><input id='attrs-3722f80e-c0df-430f-b20a-7620b36b48a7' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-3722f80e-c0df-430f-b20a-7620b36b48a7' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-f60e371a-61ff-4a93-bb8d-f24bda57f3d9' class='xr-var-data-in' type='checkbox'><label for='data-f60e371a-61ff-4a93-bb8d-f24bda57f3d9' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>orthometric height</dd><dt><span>standard_name :</span></dt><dd>height_above_geopotential_datum</dd><dt><span>units :</span></dt><dd>m</dd><dt><span>actual_range :</span></dt><dd>[500. 500.]</dd></dl></div><div class='xr-var-data'><pre>array([[500., 500., 500., ..., 500., 500., 500.],
           [500., 500., 500., ..., 500., 500., 500.],
           [500., 500., 500., ..., 500., 500., 500.],
           ...,
           [500., 500., 500., ..., 500., 500., 500.],
           [500., 500., 500., ..., 500., 500., 500.],
           [500., 500., 500., ..., 500., 500., 500.]])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-7fd4d1d8-8116-45ba-ad13-b509321eee92' class='xr-section-summary-in' type='checkbox'  ><label for='section-7fd4d1d8-8116-45ba-ad13-b509321eee92' class='xr-section-summary' >Indexes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>easting</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-2b08bc1f-663c-4856-a54e-9c2a5f9a78c1' class='xr-index-data-in' type='checkbox'/><label for='index-2b08bc1f-663c-4856-a54e-9c2a5f9a78c1' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([465533.31767976715, 465583.31767976715, 465633.31767976715,
           465683.31767976715, 465733.31767976715, 465783.31767976715,
           465833.31767976715, 465883.31767976715, 465933.31767976715,
           465983.31767976715,
           ...
           482333.31767976715, 482383.31767976715, 482433.31767976715,
           482483.31767976715, 482533.31767976715, 482583.31767976715,
           482633.31767976715, 482683.31767976715, 482733.31767976715,
           482783.31767976715],
          dtype=&#x27;float64&#x27;, name=&#x27;easting&#x27;, length=346))</pre></div></li><li class='xr-var-item'><div class='xr-index-name'><div>northing</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-13d5cf9f-9ba1-434c-a0b3-3a6f9268f53c' class='xr-index-data-in' type='checkbox'/><label for='index-13d5cf9f-9ba1-434c-a0b3-3a6f9268f53c' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([7576368.82029097, 7576418.82029097, 7576468.82029097, 7576518.82029097,
           7576568.82029097, 7576618.82029097, 7576668.82029097, 7576718.82029097,
           7576768.82029097, 7576818.82029097,
           ...
           7594368.82029097, 7594418.82029097, 7594468.82029097, 7594518.82029097,
           7594568.82029097, 7594618.82029097, 7594668.82029097, 7594718.82029097,
           7594768.82029097, 7594818.82029097],
          dtype=&#x27;float64&#x27;, name=&#x27;northing&#x27;, length=370))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-c8acec29-d409-4d14-8d57-dd409e77e6d3' class='xr-section-summary-in' type='checkbox'  checked><label for='section-c8acec29-d409-4d14-8d57-dd409e77e6d3' class='xr-section-summary' >Attributes: <span>(9)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>Conventions :</span></dt><dd>CF-1.8</dd><dt><span>title :</span></dt><dd>Magnetic total-field anomaly of the Lightning Creek sill complex, Australia</dd><dt><span>crs :</span></dt><dd>proj=utm zone=54 south datum=WGS84 units=m no_defs ellps=WGS84 towgs84=0,0,0</dd><dt><span>source :</span></dt><dd>Interpolated from airborne magnetic line data using gradient-boosted equivalent sources</dd><dt><span>license :</span></dt><dd>Creative Commons Attribution 4.0 International Licence</dd><dt><span>references :</span></dt><dd>Geophysical Acquisition &amp; Processing Section 2019. MIM Data from Mt Isa Inlier, QLD (P1029), magnetic line data, AWAGS levelled. Geoscience Australia, Canberra. http://pid.geoscience.gov.au/dataset/ga/142419</dd><dt><span>long_name :</span></dt><dd>total-field magnetic anomaly</dd><dt><span>units :</span></dt><dd>nT</dd><dt><span>actual_range :</span></dt><dd>[-1785.  3798.]</dd></dl></div></li></ul></div></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 41-42

Make a PyGMT pseudo-color map of the total field magnetic anomaly.

.. GENERATED FROM PYTHON SOURCE LINES 42-58

.. code-block:: Python

    fig = pygmt.Figure()
    scale = 2500
    pygmt.makecpt(cmap="polar+h", series=[-scale, scale], background=True)
    fig.grdimage(
        grid=data,
        cmap=True,
        shading="+a45+nt0.1",
        projection="X15c/17c",
        frame="af",
    )
    fig.colorbar(
        frame='af+l"total field magnetic anomaly [nT]"',
        position="JBC+h+o0/1c+e",
    )
    fig.show()




.. image-sg:: /gallery/images/sphx_glr_lightning-creek-magnetic_001.png
   :alt: lightning creek magnetic
   :srcset: /gallery/images/sphx_glr_lightning-creek-magnetic_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 59-60

The anomaly at the top right is the  Lightning Creek sill complex.


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 4.561 seconds)


.. _sphx_glr_download_gallery_lightning-creek-magnetic.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: lightning-creek-magnetic.ipynb <lightning-creek-magnetic.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: lightning-creek-magnetic.py <lightning-creek-magnetic.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
